# Assignment-from-Machine-Learning-2

./: Assignment_2_inClass.ipynb  EM_draft1.ipynb  gym_test.ipynb  pyproject.toml  requirements.txt
A1/: A1.html  A1.ipynb  PCA_v2.ipynb  SparseRandomProjections_v2.ipynb  draft.ipynb
A1.1/: PCA disaster.ipynb
A2/: 2.1.ipynb  2.ipynb  Assignment_2.ipynb  ElasticNet_LASSO_Ridge_v4.ipynb  Final.ipynb  Kernel_draft.ipynb  Kernel_v7.ipynb  Part2_draft.ipynb
A3/: 06_ML2_Assignment3_2024.ipynb  EM_draft.ipynb  EM_v4_CoinToss.ipynb
A4/: 06_ML2_Assignment4_2024.ipynb  MCMC PyMC Assignment4 2024.ipynb  MCMC_PyMC_Assignment4_2024_vSTABLE.ipynb  test.ipynb
Mini Project/main/: requirements.txt  street_fighter_custom_wrapper.py  test.py  to do list.md  train.py
Mini Project/original/: street_fighter_custom_wrapper_prior.py  test_prior.py  train_prior.py
StreetFighterAI/: street_fighter_custom_wrapper.py  street_fighter_custom_wrapper_gerneral.py  test.py  test_gerneral.py
StreetFighterAI/base/: street_fighter_custom_wrapper_base.py  train_base.py
StreetFighterAI/basic/: street_fighter_custom_wrapper_basic.py  train_basic.py
StreetFighterAI/gerneral/: street_fighter_custom_wrapper_gerneral.py  train_gerneral.py
StreetFighterAI/random/: street_fighter_custom_wrapper_random.py  test_random.py  train_random.py
StreetFighterAI/standard/: street_fighter_custom_wrapper.py  train.py
logs_final/DIAMBRA1/: events.out.tfevents.1714670613.Wanjeans-PC.4372.0
logs_final/Decay+DIAMBRA/: events.out.tfevents.1714658601.Wanjeans-PC.37320.0
(+10 files in other folders)
