[tool.poetry]
name = "ml2"
version = "0.1.0"
description = ""
authors = ["Alexander Moshchev <118296062+moshchev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
ipykernel = "^6.29.4"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
scipy = "^1.13.0"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
sympy = "^1.12"
nbconvert = "^7.16.3"
gymnasium = {extras = ["box2d"], version = "^0.29.1"}
ucimlrepo = "^0.0.6"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
